package edu.fiuba.algo3.modelo.evento;
import edu.fiuba.algo3.modelo.gladiador.Gladiador;

public interface Evento{
    public void afectar(Gladiador gladiador);
}
