package edu.fiuba.algo3.modelo.evento;
import edu.fiuba.algo3.modelo.gladiador.Gladiador;

public  class EventoNulo implements Evento{

    public void afectar(Gladiador gladiador){
        // hace nada
    }
}
